test/errors/002_lists.eu
#!/usr/bin/env eu -B
# -*- mode: conf -*-

x: [] __HEAD
